Release 1.2 (in development)
============================

* PR#99: Strip down seealso directives to normal admonitions.  This removes
  their unusual CSS classes (admonition-see-also), inconsistent LaTeX
  admonition title ("See Also" instead of "See also"), and spurious indentation
  in the text builder.

* sphinx-build now has a verbose option :option:`-v` which can be
  repeated for greater effect.  A single occurrance provides a
  slightly more verbose output than normal.  Two or more occurrences
  of this option provides more detailed output which may be useful for
  debugging.

* sphinx-build now provides more specific error messages when called with
  invalid options or arguments.

* sphinx-build now supports the standard :option:`--help` and
  :option:`--version` options.

* #869: sphinx-build now has the option :option:`-T` for printing the full
  traceback after an unhandled exception.

* #976: Fix gettext does not extract index entries.

* #940: Fix gettext does not extract figure caption.

* #1067: Improve the ordering of the JavaScript search results: matches in titles
  come before matches in full text, and object results are better categorized.
  Also implement a pluggable search scorer.

* Fix text writer can not handle visit_legend for figure directive contents.

* PR#72: #975: Fix gettext does not extract definition terms before docutils 0.10.0

* PR#25: In inheritance diagrams, the first line of the class docstring
  is now the tooltip for the class.

* PR#47: Added :mod:`sphinx.ext.linkcode` extension.

* PR#75: Added ``--follow-links`` option to sphinx-apidoc.

* PR#45: The linkcheck builder now checks ``#anchor``\ s for existence.

* PR#28: Added Hungarian translation.

* PR#35: Added Slovak translation.

* PR#54: Added Norwegian bokmaal translation.

* PR#52: ``special_members`` flag to autodoc now behaves like ``members``.

* #955: Fix i18n transformation.

* Handle duplicate domain indices in texinfo.
